--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
